--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,6 +36,13 @@
         android:textAllCaps="false" />
 
     <Button
+        android:id="@+id/team_list_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Team List"
+        android:textAllCaps="false" />
+
+    <Button
         android:id="@+id/add_members_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
