--- a/app/src/main/res/layout/activity_add_members.xml
+++ b/app/src/main/res/layout/activity_add_members.xml
@@ -48,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:backgroundTint="#38D2E6"
             android:text="Add" />
     </LinearLayout>
 
