--- a/app/src/main/res/layout/activity_lucky_number.xml
+++ b/app/src/main/res/layout/activity_lucky_number.xml
@@ -27,7 +27,8 @@
         <Spinner
             android:id="@+id/lucky_number_sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp" />
     </LinearLayout>
 
     <Button
