--- a/app/src/main/res/layout/activity_date_of_birth.xml
+++ b/app/src/main/res/layout/activity_date_of_birth.xml
@@ -20,7 +20,8 @@
     <Spinner
         android:id="@+id/date_sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,6 +32,7 @@
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="Select Month"
             android:textColor="#2C2323"
             android:textSize="20sp" />
@@ -38,7 +40,8 @@
         <Spinner
             android:id="@+id/month_sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
 
     </LinearLayout>
 
@@ -52,6 +55,7 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="Select Year"
             android:textColor="#2C2323"
             android:textSize="20sp" />
@@ -59,7 +63,8 @@
         <Spinner
             android:id="@+id/year_sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
 
     </LinearLayout>
 
